Tue Oct  4 21:10:08 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (class_alloc): allocate extra memory after containing
	  object setup to get rid of rare-but-potential memory leak.

	* gc.c (gc_mark_children): skip marking extended members if ptr is
	  NULL.

Tue Oct  4 16:17:50 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/time.rb (Time.strptime): use Time.at if d[:seconds] is set.
	  Reported by Christopher Eberz. [ruby-core:39903] Bug #5399

Tue Oct  4 11:44:10 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* gc.c (rb_gc_set_params): ruby_verbose can be Qnil, so use RTEST.

Tue Oct  4 08:33:41 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/etc/etc.c:  Document Etc, Etc.sysconfdir, Etc.systmpdir.  Patch
	  by mathew murphy.  [Ruby 1.9 - Bug #5396]

Tue Oct  4 08:21:51 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/shellwords.rb:  Update toplevel comment with an example.  Patch
	  by Samnang Chhun.  [Ruby 1.9 - Bug #5388]

Tue Oct  4 08:15:50 2011  Eric Hodel  <drbrain@segment7.net>

	* proc.c (proc_call):  Update documentation to match argument handling
	  of proc/Proc.new/lambda/->()

Tue Oct  4 07:59:16 2011  Eric Hodel  <drbrain@segment7.net>

	* proc.c (proc_call):  Fix documentation of Proc#call vs Proc#===.
	  [Ruby 1.9 - Bug #5349]

Tue Oct  4 07:43:18 2011  Eric Hodel  <drbrain@segment7.net>

	* array.c (rb_ary_initalize):  Make Array.new description match
	  call-seq.  Patch by Henry Maddocks.  [Ruby 1.9 - Bug #5344]

Tue Oct  4 07:35:23 2011  Eric Hodel  <drbrain@segment7.net>

	* array.c (rb_ary_initialize):  Add output for examples.  Patch by
	  Jonathan Mukai.  [Ruby 1.9 - Bug #5216]

Tue Oct  4 07:30:50 2011  Eric Hodel  <drbrain@segment7.net>

	* array.c (rb_ary_s_create):  Add example results for Array::[].  Patch
	  by Jonathan Mukai.  [Ruby 1.9 - Bug #5215]

Tue Oct  4 07:15:17 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems 1.8.11.  Move Deprecate into the
	  Gem namespace.
