@@ -1,3 +1,9 @@
+Wed Oct  5 01:22:08 2011  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/psych/lib/psych/scalar_scanner.rb: use normal begin / rescue
+	  since postfix rescue cannot receive the exception class. Thanks
+	  nagachika!
+
 Tue Oct  4 21:10:08 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* class.c (class_alloc): allocate extra memory after containing
